infra/kubernetes/ai-analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-analysis-service
  namespace: ai-product-insights
  labels:
    app: ai-analysis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-analysis-service
  template:
    metadata:
      labels:
        app: ai-analysis-service
    spec:
      containers:
        - name: ai-analysis-service
          image: product_insights-ai-analysis-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ai-analysis-service
  namespace: ai-product-insights
spec:
  type: ClusterIP
  selector:
    app: ai-analysis-service
  ports:
    - port: 8000
      targetPort: 8000
