infra/kubernetes/stats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
  namespace: ai-product-insights
  labels:
    app: stats-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      containers:
        - name: stats-service
          image: product_insights-stats-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: stats-service
  namespace: ai-product-insights
spec:
  type: ClusterIP
  selector:
    app: stats-service
  ports:
    - port: 8000
      targetPort: 8000
